fix: highlighting duck on shoot clicking (on mobile)

--- a/assets/styles/css/bundle.css
+++ b/assets/styles/css/bundle.css
@@ -444,6 +444,7 @@ body {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   touch-action: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .stage-background, .stage-background-with-trees {
